@@ -7,6 +7,7 @@ v0.1.4
 - Add the escort auto good options feature
 - Fix a bug making the extension considered you were not outside when at town
 gates
+- Now cache the session key at each page load
 
 v0.1.3
 - Fix a bug making the forum media links to sometimes not be replaced
